--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,5 +6,5 @@ main:
   - title: "CV"
     url: /cv/
     
-  # - title: "Guide"
-  #   url: /markdown/
+  - title: "Interests"
+    url: /interests/
