updating the display picture

--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Harish Haresamudram"
-  avatar           : "profile.png"
+  avatar           : "display_picture.jpg"
   bio              : "Master's student at Georgia Tech"
   location         : "Atlanta, Georgia"
   employer         :
