Removed direct link from email address

--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   location         : "Atlanta, Georgia"
   employer         :
   googlescholar    : 
-  email            : "hharesamudram3@gatech.edu"
+  email            : "hharesamudram3 at gatech.edu"
   uri              :
   bitbucket        :
   codepen          :
