changed status from Master's to PhD in the left column

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Harish Haresamudram"
   avatar           : "display_picture.jpg"
-  bio              : "Master's student at Georgia Tech"
+  bio              : "PhD student at Georgia Tech"
   location         : "Atlanta, Georgia"
   employer         :
   googlescholar    : 
