added google scholar

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   bio              : "PhD student at Georgia Tech"
   location         : "Atlanta, Georgia"
   employer         :
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=ThV9ezEAAAAJ&hl=en"
   email            : "hharesamudram3 at gatech.edu"
   uri              :
   bitbucket        :
